cmake_minimum_required(VERSION 3.14)
project(atcoder CXX)

MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
    IF(EXISTS ${CMAKE_SOURCE_DIR}/${subdir}/main.cpp)
        add_executable(${subdir} ${subdir}/main.cpp)
    ENDIF()
    IF(EXISTS ${CMAKE_SOURCE_DIR}/${subdir}/main_test.cpp)
        add_executable(${subdir}_test ${subdir}/main_test.cpp)
    ENDIF()
ENDFOREACH()